# packaging-ci

./: .gitignore  Cargo.toml  README.md
example/: config.toml
src/: blacklist.rs  collate.rs  dpkg.rs  errors.rs  fetcher.rs  git.rs  github.rs  lib.rs  main.rs  misc.rs
src/apt/: mod.rs  release.rs
src/config/: dirs.rs  mod.rs
