[package]
name = "pop-ci"
version = "0.1.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "0.99.10"
better-panic = "0.2.0"
cascade = "0.1.3"
chrono = { version = "0.4.9", features = ["serde"] }
clap = "2.33.0"
debian-changelog = { git = "https://github.com/pop-os/debian-changelog", features = ["tokio-async"] }
fern = "0.5.9"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
itertools = "0.8.0"
log = "0.4.8"
markup = "0.4.1"
numtoa = "0.2.3"
once_cell = "1.2.0"
reqwest = { version = "0.10.0-alpha.1", features = ["json"] }
serde = { version = "1.0.101", features = ["derive"] }
thiserror = "1.0.3"
tokio = { version = "0.2.0-alpha.6", features = ["process"]}
toml = "0.5.3"
anyhow = "1.0.19"
smart-default = "0.5.2"
